@@ -1,3 +1,9 @@
+2016-07-11  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	Backport from trunk:
+	PR fortran/71783
+	* gfortran.dg/dependency_46.f90:  New test.
+
 2016-07-08  Cesar Philippidis  <cesar@codesourcery.com>
 
 	Backport from trunk:
